<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_bind_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/intercommunication_bind_service" />

            <Button
                android:id="@+id/btn_unbind_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/intercommunication_unbind_service" />
        </LinearLayout>



        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/intercommunication_communicate_directly"
                android:layout_weight="@integer/intercommunication_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_start_downloading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/intercommunication_button"
                android:onClick="onClick"
                android:text="@string/intercommunication_start_downloading" />

            <Button
                android:id="@+id/btn_stop_downloading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/intercommunication_button"
                android:onClick="onClick"
                android:text="@string/intercommunication_stop_downloading" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:text="@string/intercommunication_communicate_via_receiver"
                android:layout_weight="@integer/intercommunication_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_start_service_to_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/intercommunication_button"
                android:onClick="onClick"
                android:text="@string/intercommunication_start_service_to_download" />

            <Button
                android:id="@+id/btn_stop_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/intercommunication_button"
                android:onClick="onClick"
                android:text="@string/intercommunication_stop_service" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_progress"
                android:layout_weight="16"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ProgressBar
                android:max="10000"
                android:scrollbars="horizontal"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:indeterminate="false"
                android:id="@+id/pb_update_from_service"
                android:layout_width="0dp"
                android:layout_weight="84"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:text="@string/intercommunication_communicate_with_messenger"
                android:layout_weight="@integer/intercommunication_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_bind_messenger_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/intercommunication_button"
                android:onClick="onClick"
                android:text="@string/intercommunication_start_service_to_download" />

            <Button
                android:id="@+id/btn_unbind_messenger_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/intercommunication_button"
                android:onClick="onClick"
                android:text="@string/intercommunication_stop_service" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:text="@string/intercommunication_communicate_via_aidl"
                android:layout_weight="@integer/intercommunication_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_bind_remote_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/intercommunication_button"
                android:onClick="onClick"
                android:text="@string/intercommunication_bind_remote_service" />

            <Button
                android:id="@+id/btn_unbind_remote_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/intercommunication_button"
                android:onClick="onClick"
                android:text="@string/intercommunication_unbind_remote_service" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
