<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_touch_for_largening_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_touch_for_largening_activity"
        />
    <Button
        android:id="@+id/btn_navigation_view_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_navigation_view_activity"/>
    <Button
        android:id="@+id/btn_date_grouped_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_date_grouped_activity"/>
    <ImageView
        android:id="@+id/img"
        android:src="@drawable/ic_menu_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recycler_button_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
