<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:bind="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>
    <import type="com.seckawijoki.android_test.activity.DataBindingTestActivity"/>
    <import type="com.seckawijoki.android_test.javabean.DataBindingUser" />
    <import type="com.seckawijoki.android_test.javabean.DataBindingGoods" />
    <import type="com.seckawijoki.android_test.javabean.DataBindingObservableGoods" />
    <import type="com.seckawijoki.android_test.activity.DataBindingTestActivity.GoodsHandler" />
    <import type="android.databinding.ObservableArrayMap" />
    <import type="android.databinding.ObservableList" />
    <import type="com.seckawijoki.android_test.activity.DataBindingTestActivity.DataBindingUserPresenter" />
    <variable
      name="userInfo"
      type="com.seckawijoki.android_test.javabean.DataBindingUser" />
    <variable
      name="goods"
      type="com.seckawijoki.android_test.javabean.DataBindingGoods" />
    <variable
      name="observableGoods"
      type="com.seckawijoki.android_test.javabean.DataBindingObservableGoods" />
    <variable
      name="goodsHandler"
      type="com.seckawijoki.android_test.activity.DataBindingTestActivity.GoodsHandler" />
    <variable
      name="map"
      type="android.databinding.ObservableArrayMap&lt;String, String&gt;" />
    <variable
      name="list"
      type="android.databinding.ObservableList&lt;String&gt;" />
    <variable
      name="index"
      type="int" />
    <variable
      name="key"
      type="String" />
    <variable
      name="userPresenter"
      type="com.seckawijoki.android_test.activity.DataBindingTestActivity.DataBindingUserPresenter" />
    <variable
      name="javabean"
      type="com.seckawijoki.android_test.javabean.DataBindingJavabean"/>
    <variable
      name="observableJavabean"
      type="com.seckawijoki.android_test.javabean.DataBindingObservableJavabean"/>
    <variable
      name="javabeanHandler"
      type="com.seckawijoki.android_test.activity.DataBindingTestActivity.DataBindingJavabeanHandler"/>
  </data>

  <ScrollView
    style="@style/CommonActivityLayoutPadding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical">
      <TextView
        android:text="@string/data_binding_test_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <FrameLayout
        android:id="@+id/fragment_data_binding_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
      <TextView
        android:text="@string/data_binding_test_view_stub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <ViewStub
        android:id="@+id/view_stub_data_binding_test"
        android:layout="@layout/data_binding_test_view_include"
        bind:userInfo="@{userInfo}"
        bind:userPresenter="@{userPresenter}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
      <TextView
        android:text="@string/data_binding_test_this"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <include
        layout="@layout/data_binding_test_view_include"
        bind:userPresenter="@{userPresenter}"
        bind:userInfo="@{userInfo}"/>
      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_binding_test_username"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:afterTextChanged="@{userPresenter::afterUsernameChange}"
        android:maxLines="1"
        android:text="@={userInfo.name}" />
      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:afterTextChanged="@{userPresenter::afterPasswordChange}"
        android:hint="@string/data_binding_test_password"
        android:inputType="text"
        android:maxLines="1" />
      <include
        layout="@layout/common_include_view_divider"/>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
          android:layout_width="0dp"
          android:gravity="center_horizontal"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical">
          <TextView
            style="@style/data_binding_test_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{goods.name}" />

          <TextView
            style="@style/data_binding_test_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{goods.details}" />

          <TextView
            style="@style/data_binding_test_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/data_binding_test_format_goods_price(goods.price)}" />
          <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->goodsHandler.changeGoodsName()}"
            android:text="@string/data_binding_test_change_goods_name_and_price"
            android:textAllCaps="false" />
        </LinearLayout>
        <LinearLayout
          android:layout_width="0dp"
          android:gravity="center_horizontal"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical">
          <TextView
            style="@style/data_binding_test_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{observableGoods.name}" />
          <TextView
            style="@style/data_binding_test_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{observableGoods.details}" />
          <TextView
            style="@style/data_binding_test_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(observableGoods.price)}" />
          <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->goodsHandler.changeGoodsDetails()}"
            android:text="@string/data_binding_test_change_goods_details_and_price"
            android:textAllCaps="false" />
        </LinearLayout>
      </LinearLayout>
      <include
        layout="@layout/common_include_view_divider"/>

      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          style="@style/data_binding_test_tv"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@{map[key],default=map}" />
        <TextView
          style="@style/data_binding_test_tv"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@{list[index],default=list}" />

      </LinearLayout>
      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/data_binding_test_change_observable_array_map_and_list" />
      <include
        layout="@layout/common_include_view_divider"/>
      <include
        bind:javabean="@{javabean}"
        bind:observableJavabean="@{observableJavabean}"
        bind:javabeanHandler="@{javabeanHandler}"
        layout="@layout/data_binding_test_javabean"/>
    </LinearLayout>
  </ScrollView>
</layout>
